<resources>
    <string name="app_name">BronzeApp</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>


    <string name="github_str">Github</string>
    <string name="google_play_str">Google Play</string>

    <string-array name="easing">
        <item>CUBIC</item>
        <item>QUART</item>
        <item>QUINT</item>
        <item>BOUNCE</item>
        <item>ELASTIC</item>
        <item>EXPO</item>
        <item>CIRC</item>
        <item>QUAD</item>
        <item>SINE</item>
        <item>LINEAR</item>
    </string-array>

    <string-array name="duration">
        <item>500ms</item>
        <item>1000ms</item>
        <item>1500ms</item>
        <item>2000ms</item>
        <item>2500ms</item>
        <item>3000ms</item>
        <item>3500ms</item>
    </string-array>

    <!-- Stacked chart one -->
    <string name="stacked_one_1">STATE 1</string>
    <string name="stacked_one_2">STATE 2</string>
    <string name="stacked_one_3">STATE 3</string>

    <!-- Stacked chart three -->
    <string name="stacked_three_electric">electric</string>
    <string name="stacked_three_fuel">fuel</string>

    <!-- Sandbox axis -->
    <string name="sandbox_axis_x">X</string>
    <string name="sandbox_axis_y">Y</string>
    <string name="sandbox_axis_metric">metric</string>

    <string-array name="spinner_options">
        <item>showroom</item>
        <item>sandbox</item>
    </string-array>

    <string name="chart_label">AVERAGE TIME</string>
    <string name="chart_label2">Bicycle Commuting</string>
    <string name="chart_label3">00:15:39</string>

    <string name="questionnaire_prompt">Over the last 2 weeks, how often have you been bothered by\nany of the following problems?</string>
    <string name="questionnaire_question_1">1. Little interest or pleasure in doing things.</string>
    <string name="questionnaire_question_2">2. Feeling down, depressed, or hopeless.</string>
    <string name="questionnaire_question_3">3. Trouble falling asleep, staying asleep, or\n\ \ \ \ sleeping too much.</string>

    <string name="questionnaire_answer_1">Not at all</string>
    <string name="questionnaire_answer_2">Several days</string>
    <string name="questionnaire_answer_3">More than half the days</string>
    <string name="questionnaire_answer_4">Nearly every day</string>

</resources>
