<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1E88E5"
            android:scaleType="fitXY" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="155sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:onClick="submit"
            app:backgroundTint="#21A690"
            app:srcCompat="@drawable/correct_green" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:gravity="center_vertical"
            android:text="@string/questionnaire_prompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="sans" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:text="@string/questionnaire_question_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#0D4037"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/q1_ans1"
                    style="@android:style/Widget.Button.Inset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#29CCB1"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"/>

                <Button
                    android:id="@+id/q1_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#26BFA6"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

                <Button
                    android:id="@+id/q1_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#21A690"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

                <Button
                    android:id="@+id/q1_ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19806F"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:text="@string/questionnaire_question_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#0D4037"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/q2_ans1"
                    style="@android:style/Widget.Button.Inset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#29CCB1"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

                <Button
                    android:id="@+id/q2_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#26BFA6"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

                <Button
                    android:id="@+id/q2_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#21A690"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

                <Button
                    android:id="@+id/q2_ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19806F"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:text="@string/questionnaire_question_3"
                    android:textColor="#0D4037"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/q3_ans1"
                    style="@android:style/Widget.Button.Inset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#29CCB1"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

                <Button
                    android:id="@+id/q3_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#26BFA6"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

                <Button
                    android:id="@+id/q3_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#21A690"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />

                <Button
                    android:id="@+id/q3_ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19806F"
                    android:onClick="onButtonClick"
                    android:text="@string/questionnaire_answer_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#EAF3EA"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

