<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_layout_padding">





            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card5"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_margin="@dimen/card_view_padding"
                card_view:cardCornerRadius="@dimen/card_view_roundcorner"
                card_view:cardBackgroundColor="#ffffff">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/card_toolbar_grey" android:id="@+id/chart_toolbar"/>

                    <RelativeLayout
                        android:id="@+id/legend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chart_toolbar">
                        <TextView
                            android:id="@+id/state_one"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/state_two"
                            android:layout_toStartOf="@+id/state_two"
                            android:layout_margin="5dp"
                            android:drawableLeft="@drawable/stacked_one_point1_bck"
                            android:drawableStart="@drawable/stacked_one_point1_bck"
                            android:drawablePadding="4dp"
                            android:text="@string/stacked_one_1"
                            android:textSize="12sp"
                            android:textColor="#ff2b2b2b"/>
                        <TextView
                            android:id="@+id/state_two"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="5dp"
                            android:drawableLeft="@drawable/stacked_one_point2_bck"
                            android:drawableStart="@drawable/stacked_one_point2_bck"
                            android:drawablePadding="4dp"
                            android:text="@string/stacked_one_2"
                            android:textSize="12sp"
                            android:textColor="#ff2b2b2b"/>
                        <TextView
                            android:id="@+id/state_three"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/state_two"
                            android:layout_toEndOf="@+id/state_two"
                            android:layout_margin="5dp"
                            android:drawableLeft="@drawable/stacked_one_point3_bck"
                            android:drawableStart="@drawable/stacked_one_point3_bck"
                            android:drawablePadding="4dp"
                            android:text="@string/stacked_one_3"
                            android:textSize="12sp"
                            android:textColor="#ff2b2b2b"/>
                    </RelativeLayout>
                    <com.db.chart.view.StackBarChartView
                        xmlns:chart="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/chart5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_below="@+id/legend"
                        android:layout_alignParentBottom="true"
                        chart:chart_labelColor="#929b88"
                        chart:chart_fontSize="10sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>



        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>